--- a/Web/Restaurant.Web/Resources/SharedResource.en.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.en.resx
@@ -98,4 +98,13 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
+  <data name="BOOK_TABLE">
+    <value>Book a table</value>
+  </data>
+  <data name="TESTIMONIAL">
+    <value>Testimonial</value>
+  </data>
+  <data name="CUSTOMER_FEEDBACK">
+    <value>Customer feedback</value>
+  </data>
 </root>
