--- a/Web/Restaurant.Web/Resources/Views/Home/Index.en.resx
+++ b/Web/Restaurant.Web/Resources/Views/Home/Index.en.resx
@@ -98,13 +98,40 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-  <data name="BOOK_TABLE">
-    <value>Запази маса</value>
+  <data name="HUNGRY">
+    <value>Hungry?</value>
   </data>
-  <data name="TESTIMONIAL">
-    <value>Обратна връзка</value>
+  <data name="RIGHT_PLACE">
+    <value>You've come to the right place!</value>
   </data>
-  <data name="CUSTOMER_FEEDBACK">
-    <value>Мнения на клиенти</value>
+  <data name="HOME_PAGE_DESCRIPTION">
+    <value>From juicy burgers to mouth-watering pizza - we've got it all. All made using only the freshest ingredients from local markets.</value>
+  </data>
+  <data name="EXPERIENCED_CHEFS">
+    <value>Experienced Chefs</value>
+  </data>
+  <data name="EXPERIENCED_CHEFS_DESC">
+    <value>All of our employees have 20+ years of experince in the finest restaurants.</value>
+  </data>
+  <data name="QUALITY_FOOD">
+    <value>Quality Food</value>
+  </data>
+  <data name="QUALITY_FOOD_DESC">
+    <value>We use only the best ingredients from local markets. An incredible gourmet experience everytime.</value>
+  </data>
+  <data name="ONLINE_ORDERS">
+    <value>Online Orders</value>
+  </data>
+  <data name="ONLINE_ORDERS_DESC">
+    <value>Thanks to our logistics team you can enjoy our meals from the comfort of your home.</value>
+  </data>
+  <data name="FAST_DELIVERY">
+    <value>Fast Delivery</value>
+  </data>
+  <data name="FAST_DELIVERY_DESC">
+    <value>Moneyback guarantee if you don't receive you order within 60 minutes.</value>
+  </data>
+  <data name="LEAVE_REVIEW">
+    <value>Leave a review</value>
   </data>
 </root>
