--- a/Web/Restaurant.Web/Resources/SharedResource.en.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.en.resx
@@ -158,4 +158,10 @@
   <data name="ALL_RIGHTS_RESERVED">
     <value>All rights reserved</value>
   </data>
+  <data name="ADD_TO_CART">
+    <value>Add to cart</value>
+  </data>
+  <data name="YOU_CAN_CHOOSE">
+    <value>You can choose from our</value>
+  </data>
 </root>
