Localization - contact page
Adding resource strings
Adding the new IsInSecondaryLanguage property to the UserMessageCategoryViewModel
Removing UserMessageCategoryId UI validation as it unnecessary at this stage.

--- a/Web/Restaurant.Web/Resources/SharedResource.en.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.en.resx
@@ -206,4 +206,7 @@
   <data name="RESERVATION_NUMBER">
     <value>Reservation number</value>
   </data>
+  <data name="SEND">
+    <value>Send</value>
+  </data>
 </root>
