--- a/Web/Restaurant.Web/Resources/SharedResource.en.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.en.resx
@@ -224,4 +224,94 @@
   <data name="REVIEW_DESCRIPTION">
     <value>Share your feedback, recommendations, etc.</value>
   </data>
+  <data name="ORDER">
+    <value>Order</value>
+  </data>
+  <data name="STREET">
+    <value>Street</value>
+  </data>
+  <data name="ADR_LINE_2">
+    <value>Address line two</value>
+  </data>
+  <data name="DISTRICT">
+    <value>District</value>
+  </data>
+  <data name="CITY">
+    <value>City</value>
+  </data>
+  <data name="ZIP">
+    <value>Zip</value>
+  </data>
+  <data name="COUNTRY">
+    <value>Country</value>
+  </data>
+  <data name="MARK_PRIMARY_ADDRESS">
+    <value>Mark this as my primary address</value>
+  </data>
+  <data name="WE_USE_COOKIES">
+    <value>We use cookies to understand how you use our site and to improve your experience.</value>
+  </data>
+  <data name="ACCEPT">
+    <value>Accept</value>
+  </data>
+  <data name="LEARN_MORE">
+    <value>Learn more</value>
+  </data>
+  <data name="ARE_YOU_SURE">
+    <value>Are you sure you want to delete this?</value>
+  </data>
+  <data name="DELETE">
+    <value>Delete</value>
+  </data>
+  <data name="CLOSE">
+    <value>Затвори</value>
+  </data>
+  <data name="THANK_YOU_ORDER">
+    <value>Thank you for your order!</value>
+  </data>
+  <data name="ORDER_NUMBER">
+    <value>Order number</value>
+  </data>
+  <data name="SHIPPING">
+    <value>Shipping</value>
+  </data>
+  <data name="TOTAL_PRICE">
+    <value>Total price</value>
+  </data>
+  <data name="ADDRESS">
+    <value>Address</value>
+  </data>
+  <data name="EDT">
+    <value>Estimated delivery time</value>
+  </data>
+  <data name="COMPLETED_ON">
+    <value>Completed on</value>
+  </data>
+  <data name="YOUR_ORDER">
+    <value>your order</value>
+  </data>
+  <data name="BEST_WAY_TO">
+    <value>The best way to share your feedback is by</value>
+  </data>
+  <data name="LEAVING_A_REVIEW">
+    <value>leaving a review!</value>
+  </data>
+  <data name="PREVIOUS">
+    <value>Previous</value>
+  </data>
+  <data name="NEXT">
+    <value>Next</value>
+  </data>
+  <data name="OPS">
+    <value>Oops...</value>
+  </data>
+  <data name="CAN'T_FIND_CONTENT">
+    <value>We can't seem to find what you're looking for.</value>
+  </data>
+  <data name="OH_NO">
+    <value>Oh no!</value>
+  </data>
+  <data name="ADDRESS_NAME">
+    <value>Address name</value>
+  </data>
 </root>
