UI improvemetns - Orders
Added resource strings to All order pages
Fixed responsive view on All order page, improved item alignmen on page

--- a/Web/Restaurant.Web/Resources/SharedResource.bg.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.bg.resx
@@ -329,4 +329,7 @@
   <data name="SAVE">
     <value>Запази</value>
   </data>
+  <data name="YOUR_ORDERS">
+    <value>Вашите поръчки</value>
+  </data>
 </root>
