--- a/Web/Restaurant.Web/Resources/SharedResource.en.resx
+++ b/Web/Restaurant.Web/Resources/SharedResource.en.resx
@@ -329,4 +329,7 @@
   <data name="SAVE">
     <value>Save</value>
   </data>
+  <data name="YOUR_ORDERS">
+    <value>Your orders</value>
+  </data>
 </root>
